# pulumi-vercel

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README-PROVIDER.md  README.md  devbox.json  go.work  go.work.sum  mise.toml  renovate.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_vercel/: README.md  __init__.py  _inputs.py  dns_record.py  get_alias.py  get_file.py  get_project.py  get_project_directory.py  outputs.py  project.py  project_domain.py  project_environment_variable.py  provider.py  shared_environment_variable.py
sdk/python/pulumiverse_vercel/: README.md  __init__.py  _inputs.py  _utilities.py  access_group.py  access_group_project.py  alias.py  attack_challenge_mode.py  custom_certificate.py  custom_environment.py  deployment.py  dns_record.py  edge_config.py  edge_config_item.py  edge_config_schema.py  edge_config_token.py  firewall_bypass.py  firewall_config.py  get_access_group.py  get_access_group_project.py  get_alias.py  get_attack_challenge_mode.py  get_custom_environment.py  get_deployment.py  get_domain_config.py  get_dsync_groups.py  get_edge_config.py  get_edge_config_item.py  get_edge_config_schema.py  get_edge_config_token.py  get_endpoint_verification.py  get_file.py  get_log_drain.py  get_microfrontend_group.py  get_microfrontend_group_membership.py  get_prebuilt_project.py  get_project.py  get_project_deployment_retention.py  get_project_directory.py  get_project_function_cpu.py  (+25 more)
sdk/python/pulumiverse_vercel/config/: __init__.pyi  vars.py
(+706 files in other folders)
